--- a/app/public/home.ejs
+++ b/app/public/home.ejs
@@ -107,14 +107,56 @@
                     </div>
                 </div>
             </div>
-
         </div>
     </div>
 
     <script id="tViewSide" type="text/html">
         <% views.forEach(function(view, key){ %>
-            <li><a class="viewname" id="<%=key %>_item" href="#i:<%=key %>/s:1" data-name="<%=view %>" data-index="<%=key %>"><%=view %></a></li>
+        <li id="<%=key %>_item" data-name="<%=view %>" data-index="<%=key %>">
+            <span class="viewedit" href="#i:<%=key %>/s:1">
+                <i class="glyphicon glyphicon-edit"></i>
+            </span>
+            <a class="viewname" href="#i:<%=key %>/s:1"><%=view %></a>
+        </li>
         <% }) %>
+
+        <div id="vieweditPrompt" class="modal fade fpromptModal" tabindex="-1" role="dialog">
+            <div class="modal-dialog" role="document">
+
+                <form class="form vpromtEdit" >
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                            <h4 class="modal-title">Edit View</h4>
+                        </div>
+                        <div class="modal-body">
+
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="col-md-12 form-group">
+                                        <label>Name</label>
+                                        <input class="vieweditname form-control" name="value">
+                                    </div>
+
+                                    <div class="col-md-12 form-group">
+                                        <textarea class="vieweditcontent form-control" name="content"></textarea>
+                                    </div>
+                                </div>
+
+                            </div>
+
+                        </div>
+                        <div class="modal-footer">
+                            <span class="btn-group">
+                                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                <button type="submit" class="btn btn-default" >Submit</button>
+                            </span>
+                        </div>
+                    </div><!-- /.modal-content -->
+                </form>
+            </div><!-- /.modal-dialog -->
+        </div>
+
     </script>
 
     <script id="tViewNav" type="text/html">
@@ -425,6 +467,7 @@
             </div>
         </div>
     </script>
+
     <script id="tOptionArray" type="text/html">
         <% options.forEach(function(value, index){ %>
             <option value="<%=value %>" <%= selected == value ? 'selected' : '' %> ><%=value %></option>
